--- a/app/Templates/Login/Assets/css/style.css
+++ b/app/Templates/Login/Assets/css/style.css
@@ -90,3 +90,20 @@ html .login-wrap:after {
   height: 5px;
   border-radius: 5px 5px 0 0;
 }
+
+
+.footer{
+  color: white;
+  text-align: center;
+  bottom: 20px;
+  position: absolute;
+  width: 100%;
+}
+
+.footer a{
+  color: orange;
+}
+
+.footer a:hover{
+  color: white;
+}
